realicé cambios en cuanto a las imágenes

--- a/productos.html
+++ b/productos.html
@@ -48,10 +48,10 @@
             <h3>Accesorios-Rolex</h3>
         </div>
 
-        <div class="row container-fluid">
+        <div class="row container-fluid mx-auto">
             <div class="col-xl-3 col-md-6 col-sm-12">
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="/img/reloj1.webp" class="card-img-top" alt="...">
+                    <img src="img/reloj1.webp" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h3 class="card-title">ROLEX-RIP</h3>
                         <p class="card-text">$122000</p>
