--- a/servicios.html
+++ b/servicios.html
@@ -63,7 +63,7 @@
                         <div class="col p-4 d-flex flex-column position-static">
                             <h3 class="mb-0 text-center">Reparaciones</h3>
                             <hr>
-                            <img src="/img/reparación1.webp" alt="" class="reparaciones container-fluid">
+                            <img src="img/reparación1.webp" alt="" class="reparaciones container-fluid">
                             <p class="text-center mb-auto">Hacemos reparaciones, buscamos que logres tener un servicio
                                 eficiente con una ámplia variedad de repuestos orinigales.</p>
                         </div>
@@ -75,7 +75,7 @@
                         <div class="col p-4 d-flex flex-column position-static">
                             <h3 class="mb-0 text-center">Pulidos</h3>
                             <hr>
-                            <img src="/img/pulidos.png" alt="" class="reparaciones container-fluid">
+                            <img src="img/pulidos.png" alt="" class="reparaciones container-fluid">
                             <p class="mb-auto text-center">¡Que tu reloj no pierda brillo, Nosotros nos encargamos de eso! </p>
                         </div>
                     </div>
@@ -87,7 +87,7 @@
                             <div class="col p-4 d-flex flex-column position-static">
                                 <h3 class="mb-0 text-center">Repuestos originales</h3>
                                 <hr>
-                                <img src="/img/repuestospp.jpg" alt="" class="reparaciones container-fluid">
+                                <img src="img/repuestospp.jpg" alt="" class="reparaciones container-fluid">
                                 <p class="mb-auto text-center">Tenemos para ofrecerte repuestos originales en todas nuetras sucursales, incluso, hacemos envíos a distintas partes del país, ¡contactanos, nosotros te asesoramos!</p>
                             </div>
                         </div>
@@ -98,7 +98,7 @@
                             <div class="col p-4 d-flex flex-column position-static">
                                 <h3 class="mb-0 text-center">Mantenimiento</h3>
                                 <hr>
-                                <img src="/img/mantenimeinto.avif" alt="" class="reparaciones container-fluid">
+                                <img src="img/mantenimeinto.avif" alt="" class="reparaciones container-fluid">
                                 <p class="mb-auto text-center">Podés traernos tu reloj y nosotros le hacemos el mantenimeintopara que siempre se vea como nuevo!</p>
                             </div>
                         </div>
