--- a/index.html
+++ b/index.html
@@ -70,8 +70,6 @@
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
                 data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
             </button>
         </div>
 
@@ -79,7 +77,7 @@
             <h1>Rolex</h1>
         </div>
 
-        <h3 class="mt-3 text-center">Novedades</h3>
+        <h3 class="mt-3 text-center">NOVEDADES</h3>
 
         <hr class="featurette-divider">
 
@@ -92,7 +90,7 @@
             </div>
 
             <div class="col-xl-3 col-md-6 col-sm-12 mx-auto">
-                <img class="img-fluid" src="/img/water.jpg" alt="">
+                <img class="img-fluid" src="img/water.jpg" alt="">
                 <br>
             </div>
         </div>
@@ -107,7 +105,7 @@
             </div>
 
             <div class="col-xl-3 col-md-6 col-sm-12 mx-auto">
-                <img class="img-fluid" src="/img/mallas.jpg" alt="">
+                <img class="img-fluid" src="img/mallas.jpg" alt="">
                 <br>
             </div>
         </div>
@@ -122,7 +120,7 @@
             </div>
 
             <div class="col-xl-3 col-md-6 col-sm-12 mx-auto">
-                <img class="img-fluid" src="/img/rolexmujer.jpg" alt="">
+                <img class="img-fluid" src="img/rolexmujer.jpg" alt="">
                 <br>
             </div>
         </div>
