--- a/productos.html
+++ b/productos.html
@@ -48,10 +48,10 @@
             <h3>Accesorios-Rolex</h3>
         </div>
 
-        <div class="row container-fluid mx-auto">
-            <div class="col-xl-3 col-md-6 col-sm-12">
+        <div class="row container-fluid text-center ms-auto">
+            <div class="col-xl-3 col-md-6 col-sm-12 contenedor-cads">
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="img/reloj1.webp" class="card-img-top" alt="...">
+                    <img src="img/reloj1.webp" alt="...">
                     <div class="card-body">
                         <h3 class="card-title">ROLEX-RIP</h3>
                         <p class="card-text">$122000</p>
@@ -59,7 +59,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-3 col-md-6 col-sm-12">
+
+            <div class="col-xl-3 col-md-6 col-sm-12 contenedor-cads">
                 <div class="card text-center" style="width: 18rem;">
                     <img src="img/reloj2.webp" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -69,7 +70,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-3 col-md-6 col-sm-12">
+
+            <div class="col-xl-3 col-md-6 col-sm-12 contenedor-cads">
                 <div class="card text-center" style="width: 18rem;">
                     <img src="img/rolex.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -79,7 +81,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-3 col-md-6 col-sm-12">
+
+            <div class="col-xl-3 col-md-6 col-sm-12 contenedor-cads">
                 <div class="card text-center" style="width: 18rem;">
                     <img src="img/rolex1.webp" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -89,7 +92,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-3 col-md-6 col-sm-12">
+
+            <div class="col-xl-3 col-md-6 col-sm-12 contenedor-cads">
                 <div class="card text-center" style="width: 18rem;">
                     <img src="img/ww3.webp" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -99,7 +103,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-3 col-md-6 col-sm-12">
+
+            <div class="col-xl-3 col-md-6 col-sm-12 contenedor-cads">
                 <div class="card text-center" style="width: 18rem;">
                     <img src="img/ww1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -109,17 +114,19 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-3 col-md-6 col-sm-12">
+
+            <div class="col-xl-3 col-md-6 col-sm-12 contenedor-cads">
                 <div class="card text-center" style="width: 18rem;">
                     <img src="img/ww8.webp" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h3 class="card-title">ROLEX-CASH</h3>
+                        <h3 class="card-title">ROLEX-CAS</h3>
                         <p class="card-text">$55000</p>
                         <a href="#" class="color-btn">Agregar al carrito</a>
                     </div>
                 </div>
             </div>
-            <div class="col-xl-3 col-md-6 col-sm-12">
+
+            <div class="col-xl-3 col-md-6 col-sm-12 contenedor-cads">
                 <div class="card text-center" style="width: 18rem;">
                     <img src="img/opp1.webp" class="card-img-top" alt="...">
                     <div class="card-body">
