--- a/productos.html
+++ b/productos.html
@@ -48,7 +48,7 @@
             <h3>Accesorios-Rolex</h3>
         </div>
 
-        <div class="row container-fluid text-center ms-auto">
+        <div class="row container-fluid text-center ">
             <div class="col-xl-3 col-md-6 col-sm-12 contenedor-cads">
                 <div class="card text-center" style="width: 18rem;">
                     <img src="img/reloj1.webp" alt="...">
