cambios de estilo

--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!-- 2) Vinculamos la hoja de estilo de CSS -->
     <link rel="stylesheet" href="css/estilo.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+
     <title>Inicio</title>
 </head>
 
 <body class="bgIndex">
     <nav class="navbar navbar-expand-lg bg-body-tertiary text-center">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">ROLEX</a>
+            <a class="navbar-brand" href="index.html">
+                <h1 class="logo">ROLEX</h1>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
