--- a/html/productos.html
+++ b/html/productos.html
@@ -8,50 +8,51 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!-- 2) Vinculamos la hoja de estilo de CSS -->
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="../css/estilo.css">
     <title>Accesorios-Rolex</title>
 </head>
 
 <body class="bgIndex">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <!-- ENCABEZADO -->
+    <header class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">ROLEX</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <a class="navbar-brand" href="../index.html">
+                <h1 class="logo">ROLEX</h1>
+            </a>
+            <!-- MENÚ DE NAVEGACIÓN -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
+                        <a class="nav-link" href="../index.html"><h2 class="pages">Inicio</h2></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productos.html">Productos</a>
+                        <a class="nav-link" href="productos.html"><h2 class="pages">Productos</h2></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="servicios.html">Servicios</a>
+                        <a class="nav-link" href="servicios.html"><h2 class="pages">Servicios</h2></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sucursales.html">Sucursales</a>
+                        <a class="nav-link" href="sucursales.html"><h2 class="pages">Sucursales</h2></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contactos.html">Contactos</a>
+                        <a class="nav-link" href="contactos.html"><h2 class="pages">Contactos</h2></a>
                     </li>
                 </ul>
             </div>
         </div>
-    </nav>
+    </header>
 
-    <!-- CARDS -->
+    <!-- CONTENIDO PRINCIPAL DE LA PÁGINA -->
     <main class="marginF">
+        <!-- titulo divisorio -->
         <div class="tituloP">       
             <h3>Accesorios-Rolex</h3>
         </div>
-
+        <!-- card -->
         <div class="row container-fluid text-center ">
             <div class="col-xl-3 col-md-6 col-sm-12 contenedor-cads">
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="img/reloj1.webp" alt="...">
+                    <img src="../img/reloj1.webp" alt="...">
                     <div class="card-body">
                         <h3 class="card-title">ROLEX-RIP</h3>
                         <p class="card-text">$122000</p>
@@ -62,7 +63,7 @@
 
             <div class="col-xl-3 col-md-6 col-sm-12 contenedor-cads">
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="img/reloj2.webp" class="card-img-top" alt="...">
+                    <img src="../img/reloj2.webp" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h3 class="card-title">ROLEX-RUBÍ</h3>
                         <p class="card-text">$92700</p>
@@ -73,7 +74,7 @@
 
             <div class="col-xl-3 col-md-6 col-sm-12 contenedor-cads">
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="img/rolex.jpg" class="card-img-top" alt="...">
+                    <img src="../img/rolex.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h3 class="card-title">ROLEX-WOMAN</h3>
                         <p class="card-text">$65458</p>
@@ -84,7 +85,7 @@
 
             <div class="col-xl-3 col-md-6 col-sm-12 contenedor-cads">
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="img/rolex1.webp" class="card-img-top" alt="...">
+                    <img src="../img/rolex1.webp" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h3 class="card-title">ROLEX-GOLDEN</h3>
                         <p class="card-text">$150000</p>
@@ -95,7 +96,7 @@
 
             <div class="col-xl-3 col-md-6 col-sm-12 contenedor-cads">
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="img/ww3.webp" class="card-img-top" alt="...">
+                    <img src="../img/ww3.webp" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h3 class="card-title">ROLEX-DATEJUST</h3>
                         <p class="card-text">$60000</p>
@@ -106,7 +107,7 @@
 
             <div class="col-xl-3 col-md-6 col-sm-12 contenedor-cads">
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="img/ww1.jpg" class="card-img-top" alt="...">
+                    <img src="../img/ww1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h3 class="card-title">ROLEX-PLUS</h3>
                         <p class="card-text">$120000</p>
@@ -117,7 +118,7 @@
 
             <div class="col-xl-3 col-md-6 col-sm-12 contenedor-cads">
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="img/ww8.webp" class="card-img-top" alt="...">
+                    <img src="../img/ww8.webp" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h3 class="card-title">ROLEX-CAS</h3>
                         <p class="card-text">$55000</p>
@@ -128,7 +129,7 @@
 
             <div class="col-xl-3 col-md-6 col-sm-12 contenedor-cads">
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="img/opp1.webp" class="card-img-top" alt="...">
+                    <img src="../img/opp1.webp" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h3 class="card-title">ROLEX-STOR</h3>
                         <p class="card-text">$137000</p>
@@ -140,15 +141,9 @@
     </main>
 
     <!-- PIE DE PÁGINA -->
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-xl-3 col-md-6 col-sm-12">
-                <footer class="fixed-bottom">
-                    <spam>© Rolex - Todos los derechos reservados</spam>
-                </footer>
-            </div>
-        </div>
-    </div>
+    <footer class="fixed-bottom">
+        <spam>© Rolex - Todos los derechos reservados</spam>
+    </footer>
 
     <!-- JS BS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
