--- a/index.html
+++ b/index.html
@@ -10,44 +10,41 @@
     <!-- 2) Vinculamos la hoja de estilo de CSS -->
     <link rel="stylesheet" href="css/estilo.css">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-
     <title>Inicio</title>
 </head>
 
 <body class="bgIndex">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary text-center">
+
+    <!-- ENCABEZADO -->
+    <header class="navbar navbar-expand-lg bg-body-tertiary text-center">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <h1 class="logo">ROLEX</h1>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <!-- MENÚ DE NAVEGACIÓN -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
+                        <a class="nav-link" href="index.html"><h2 class="pages">Inicio</h2  class="pages"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productos.html">Productos</a>
+                        <a class="nav-link" href="html/productos.html"><h2  class="pages">Productos</h2  class="pages"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="servicios.html">Servicios</a>
+                        <a class="nav-link" href="html/servicios.html"><h2  class="pages">Servicios</h2 class="pages"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sucursales.html">Sucursales</a>
+                        <a class="nav-link" href="html/sucursales.html"><h2  class="pages">Sucursales</h2 class="pages"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contactos.html">Contactos</a>
+                        <a class="nav-link" href="html/contactos.html"><h2 class="pages">Contactos</h2 class="pages"></a>
                     </li>
                 </ul>
             </div>
         </div>
-    </nav>
+    </header>   
+
+    <!-- CONTENIDO PRINCIPAL DE LA PÁGINA -->
     <main>
         <!-- carrusel -->
         <div id="carouselExampleIndicators" class="carousel slide">
@@ -80,10 +77,12 @@
             </button>
         </div>
 
+        <!-- titulo divisorio -->
         <div class="tituloP">
             <h1>Rolex</h1>
         </div>
 
+        <!-- área novedades -->
         <h3 class="mt-3 text-center">NOVEDADES</h3>
 
         <hr class="featurette-divider">
@@ -91,14 +90,11 @@
         <div class="row text-center container-fluid">
             <div class="col-xl-3 col-md-6 col-sm-12">
                 <h2 class="featurette-heading fw-normal">Water Resistant Watch</h2>
-                <p class="lead">LLegaron a nuestras sucursales los water resistant watch, aprovecha nuestras
-                    promociones,
-                    HOT SALE 30%</p>
+                <p class="lead">LLegaron a nuestras sucursales los water resistant watch, aprovecha nuestras promociones, HOT SALE 30%</p>
             </div>
 
             <div class="col-xl-3 col-md-6 col-sm-12 mx-auto">
                 <img class="img-fluid" src="img/water.jpg" alt="">
-                <br>
             </div>
         </div>
 
@@ -113,7 +109,6 @@
 
             <div class="col-xl-3 col-md-6 col-sm-12 mx-auto">
                 <img class="img-fluid" src="img/mallas.jpg" alt="">
-                <br>
             </div>
         </div>
 
@@ -128,22 +123,15 @@
 
             <div class="col-xl-3 col-md-6 col-sm-12 mx-auto">
                 <img class="img-fluid" src="img/rolexmujer.jpg" alt="">
-                <br>
             </div>
         </div>
-
-        </div><!-- /.container -->
     </main>
+
     <!-- PIÉ DE PÁGINA -->
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-xl-3 col-md-6 col-sm-12">
-                <footer class="fixed-bottom">
-                    <spam>© Rolex - Todos los derechos reservados</spam>
-                </footer>
-            </div>
-        </div>
-    </div>
+    <footer class="fixed-bottom">
+        <spam>© Rolex - Todos los derechos reservados</spam>
+    </footer>
+           
 
     <!-- JS BS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
