--- a/html/sucursales.html
+++ b/html/sucursales.html
@@ -19,6 +19,10 @@
             <a class="navbar-brand" href="../index.html">
                 <h1 class="logo">ROLEX</h1>
             </a>
+            <!-- menú hamburguesa -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <!-- MENÚ DE NAVEGACIÓN -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
