arreglo de imágenes

--- a/html/servicios.html
+++ b/html/servicios.html
@@ -68,7 +68,7 @@
             <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
                 <div class="col-lg-6 px-0 container-fluid">
                     <h4 class="display-4 fst-italic">Buscamos ofrecerte un mejor servicio...</h4>
-                    <p class="lead my-3">Por eso nuestra compañía ROLEX quiere ofrecerte reparaciones, pulidos, pintura
+                    <p class="lead my-3">Por eso nuestra compañía ROLEX quiere ofrecerte reparaciones, pulidos, mantenimiento
                         y una amplia variedad de mallas, para lucir tu reloj como nuevo!</p>
                 </div>
             </div>
@@ -79,9 +79,8 @@
                     <div class="col p-4 d-flex flex-column position-static">
                         <h5 class="mb-0 text-center">Reparaciones</h5>
                         <hr>
-                        <img src="../img/recorte2.png" alt="" class="container-fluid transf">
-                        <p class="text-center mb-auto serv">Hacemos reparaciones, buscamos que logres tener un servicio
-                            eficiente con una ámplia variedad de repuestos orinigales.</p>
+                        <img src="../img/repimg.png" alt="" class="container-fluid transf">
+                        <p class="text-center mb-auto serv">Hacemos reparaciones, buscamos que logres tener un servicio eficiente con una ámplia variedad de repuestos orinigales.</p>
                     </div>
                 </div>
             </div>
@@ -90,9 +89,8 @@
                     <div class="col p-4 d-flex flex-column position-static">
                         <h5 class="mb-0 text-center">Pulidos</h5>
                         <hr>
-                        <img src="../img/recorte.png" alt="" class="container-fluid transf">
-                        <p class="mb-auto text-center serv">¡Que tu reloj no pierda brillo, Nosotros nos encargamos de
-                            eso! </p>
+                        <img src="../img/pulidos.png" alt="" class="container-fluid transf">
+                        <p class="mb-auto text-center serv">Piensas que tu reloj ya no puede verse como nuevo?, ¡nosotros nos encargamos de eso! </p>
                     </div>
                 </div>
             </div>
